[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "amazon-transcribe>=0.6.2",
    "anthropic>=0.69.0",
    "boto3>=1.34.0",
    "fastapi>=0.139.0",
    "langgraph>=0.2.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
    "wsproto>=1.3.2",
]
